--- a/WeatherApp/app/src/main/res/drawable/toggle.xml
+++ b/WeatherApp/app/src/main/res/drawable/toggle.xml
@@ -3,6 +3,7 @@
     <item android:drawable="@drawable/button_pressed" android:state_pressed="true" />
     <item android:drawable="@drawable/button_pressed" android:state_focused="true"/>
     <item android:drawable="@drawable/button_pressed" android:state_selected="true"/>
+    <item android:drawable="@drawable/button_pressed" android:state_activated="true"/>
 
     <item android:drawable="@drawable/button_default"/>
 </selector>
