--- a/WeatherApp/app/src/main/res/layout/activity_main.xml
+++ b/WeatherApp/app/src/main/res/layout/activity_main.xml
@@ -18,42 +18,66 @@
         android:layout_alignParentTop="true">
 
         <Button
-            android:layout_width="75dp"
+            android:layout_width="56dp"
             android:id="@+id/tempScaleButton"
-            android:layout_height="75dp"
+            android:layout_height="54dp"
             android:background="@drawable/toggle"
-            android:layout_gravity="right"/>
+            android:layout_gravity="end"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/dayZeroDate" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/blurb"
-            android:textAlignment="center"
+            android:textAlignment="textStart"
+            android:layout_gravity="start"
             android:fontFamily="sans-serif-thin"
             />
 
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:id="@+id/dayZeroImage"
-            android:layout_gravity="center"
-            android:layout_marginTop="30dp"/>
-
-        <TextView
+        <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/dayZeroMaxTemp"
-            android:textSize="70sp"
-            android:textAlignment="center"
-            android:fontFamily="sans-serif-thin"/>
+            android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/dayZeroMinTemp"
-            android:textSize="30sp"
-            android:textAlignment="center"
-            android:fontFamily="sans-serif-thin"/>
+            <ImageView
+                android:layout_width="150dp"
+                android:id="@+id/dayZeroImage"
+                android:layout_gravity="start"
+                android:layout_marginTop="30dp"
+                android:layout_height="150dp"
+                android:layout_weight="1" />
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/dayZeroMaxTemp"
+                    android:textSize="90sp"
+                    android:textAlignment="center"
+                    android:layout_gravity="end"
+                    android:fontFamily="sans-serif-thin"
+                    android:paddingTop="20dp"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/dayZeroMinTemp"
+                    android:textSize="30sp"
+                    android:textAlignment="center"
+                    android:layout_gravity="end"
+                    android:fontFamily="sans-serif-thin"/>
+            </LinearLayout>
+        </LinearLayout>
+
     </LinearLayout>
     <LinearLayout
         android:orientation="horizontal"
@@ -64,7 +88,6 @@
         android:id="@+id/week"
         android:layout_alignParentBottom="true"
         android:weightSum="6"
-        android:layout_below="@+id/today"
         android:paddingTop="20dp">
         <LinearLayout
             android:layout_width="0dp"
@@ -72,6 +95,12 @@
             android:orientation="vertical"
             android:id="@+id/dayOne"
             android:layout_weight="1">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/dayOneDay" />
+
             <ImageView
                 android:layout_width="60dp"
                 android:layout_height="60dp"
@@ -99,6 +128,10 @@
             android:orientation="vertical"
             android:id="@+id/dayTwo"
             android:layout_weight="1">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/dayTwoDay" />
             <ImageView
                 android:layout_width="60dp"
                 android:id="@+id/dayTwoImage"
@@ -128,6 +161,10 @@
             android:weightSum="1"
             android:layout_width="0dp"
             android:layout_weight="1">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/dayThreeDay" />
             <ImageView
                 android:layout_width="60dp"
                 android:layout_height="60dp"
@@ -156,6 +193,10 @@
             android:id="@+id/dayFour"
             android:layout_width="0dp"
             android:layout_weight="1">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/dayFourDay" />
             <ImageView
                 android:layout_width="60dp"
                 android:id="@+id/dayFourImage"
@@ -183,6 +224,10 @@
             android:orientation="vertical"
             android:id="@+id/dayFive"
             android:layout_weight="1">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/dayFiveDay" />
             <ImageView
                 android:layout_width="60dp"
                 android:layout_height="60dp"
@@ -210,6 +255,10 @@
             android:orientation="vertical"
             android:id="@+id/daySix"
             android:layout_weight="1" >
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/daySixDay" />
             <ImageView
                 android:layout_width="60dp"
                 android:layout_height="60dp"
