--- a/WeatherApp/app/src/main/res/layout/activity_main.xml
+++ b/WeatherApp/app/src/main/res/layout/activity_main.xml
@@ -21,13 +21,16 @@
             android:layout_width="56dp"
             android:id="@+id/tempScaleButton"
             android:layout_height="54dp"
-            android:background="@drawable/toggle"
+            android:background="@drawable/button_default"
             android:layout_gravity="end"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/dayZeroDate" />
+            android:id="@+id/dayZeroDate"
+            android:textAlignment="textStart"
+            android:layout_gravity="start"
+            android:fontFamily="sans-serif-thin" />
 
         <TextView
             android:layout_width="match_parent"
@@ -99,7 +102,9 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/dayOneDay" />
+                android:id="@+id/dayOneDay"
+                android:fontFamily="sans-serif-thin"
+                android:textAlignment="center"/>
 
             <ImageView
                 android:layout_width="60dp"
@@ -118,6 +123,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/dayOneMinTemp"
                 android:textAlignment="center"
+                android:layout_gravity="center"
                 android:textSize="20sp"
                 android:fontFamily="sans-serif-thin"/>
 
@@ -131,7 +137,10 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/dayTwoDay" />
+                android:id="@+id/dayTwoDay"
+                android:fontFamily="sans-serif-thin"
+                android:textAlignment="center"
+                />
             <ImageView
                 android:layout_width="60dp"
                 android:id="@+id/dayTwoImage"
@@ -164,7 +173,9 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/dayThreeDay" />
+                android:id="@+id/dayThreeDay"
+                android:fontFamily="sans-serif-thin"
+                android:textAlignment="center"/>
             <ImageView
                 android:layout_width="60dp"
                 android:layout_height="60dp"
@@ -196,7 +207,9 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/dayFourDay" />
+                android:id="@+id/dayFourDay"
+                android:fontFamily="sans-serif-thin"
+                android:textAlignment="center"/>
             <ImageView
                 android:layout_width="60dp"
                 android:id="@+id/dayFourImage"
@@ -227,7 +240,9 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/dayFiveDay" />
+                android:id="@+id/dayFiveDay"
+                android:fontFamily="sans-serif-thin"
+                android:textAlignment="center"/>
             <ImageView
                 android:layout_width="60dp"
                 android:layout_height="60dp"
@@ -258,7 +273,9 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/daySixDay" />
+                android:id="@+id/daySixDay"
+                android:fontFamily="sans-serif-thin"
+                android:textAlignment="center"/>
             <ImageView
                 android:layout_width="60dp"
                 android:layout_height="60dp"
