--- a/WeatherApp/app/src/main/res/layout/activity_main.xml
+++ b/WeatherApp/app/src/main/res/layout/activity_main.xml
@@ -47,11 +47,11 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:layout_width="150dp"
+                android:layout_width="0dp"
                 android:id="@+id/dayZeroImage"
                 android:layout_gravity="start"
-                android:layout_marginTop="30dp"
-                android:layout_height="150dp"
+                android:paddingTop="150dp"
+                android:layout_height="180dp"
                 android:layout_weight="1" />
 
             <LinearLayout
